init flutter to firebase connection

--- a/firebase.json
+++ b/firebase.json
@@ -27,6 +27,12 @@
       }
     }
   },
+  "emulators": {
+    "functions": {
+      "port": 5001,
+      "host": "0.0.0.0"
+    }
+  },
   "functions": [
     {
       "source": "functions",
